tests/snapshots/run_wpt_conformance__coreml_gatherElements_float16_2D_input_and_uint32_indices_options_axis_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gatherElements.https.any.js gatherElements float16 2D input and uint32 indices options.axis=1, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported constant data type: Uint32

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherElementsInput: f16[3, 3];
  }

  consts {
    operand_0: u32[3, 2] @bytes([1, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]);
  }

  nodes {
    [gatherElementsOutput] = gatherElements(gatherElementsInput, operand_0, axis=1, label="");
  }

  outputs { gatherElementsOutput; }
}
